--- a/.gitignore
+++ b/.gitignore
@@ -140,3 +140,4 @@ thirdparty/
 /examples/basis_lib/environment.sh.env
 /examples/basis_lib/graph_info.json
 *.gdb_history
+/conan_imports_manifest.txt
