--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,9 @@ install_manifest.txt
 compile_commands.json
 __pycache__/
 
+test_package*/__pycache__/*
+test_package*/build/*
+
 # coverage results
 coverage
 build/coverage
