UPD: sanitizers support

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -37,7 +37,7 @@ message( "CONAN_PKG::FakeIt=${FakeIt_IMPORTED_LOCATION}" )
 
 list(APPEND TESTS_3DPARTY_LIBS
     #FakeIt
-    CONAN_PKG::gtest
+    CONAN_PKG::conan_gtest
     CONAN_PKG::FakeIt
     CONAN_PKG::catch2
     ${ROOT_PROJECT_NAME}-catch2-root # so FakeIt will be able to see 'catch.hpp'
@@ -96,7 +96,7 @@ macro(set_test_compile_options target)
     CXX_EXTENSIONS OFF
     CMAKE_CXX_STANDARD_REQUIRED ON
     CMAKE_CXX_FLAGS "-fno-rtti /std:c++latest"
-    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/${CMAKE_BUILD_TYPE}/tests )
+    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR} )
 endmacro()
 
 macro(tests_add_executable target source_list TEST_ARGS TEST_LIB)
@@ -306,20 +306,21 @@ if(${ROOT_PROJECT_NAME}_BUILD_TESTS)
   )
   tests_add_executable(${ROOT_PROJECT_NAME}-fakeit
     "${fakeit_deps}" "${CATCH2_TEST_ARGS}" "${test_main_catch}")
+
+  #add_to_tests_list(utils)
+  #add_to_tests_list(pimpl)
+
+  #tests_add_executable(check_all ${UNIT_TEST_SOURCE_LIST} ${GTEST_TEST_ARGS})
+  #message(FATAL_ERROR ${UNIT_TEST_SOURCE_LIST})
+
+  # "pimpl" is one of test program names
+  add_custom_command( TARGET ${ROOT_PROJECT_NAME}-pimpl POST_BUILD
+                      COMMAND ${CMAKE_COMMAND} -E copy_directory
+                          ${CMAKE_CURRENT_SOURCE_DIR}/data
+                          ${CMAKE_CURRENT_BINARY_DIR} )
+
+  enable_testing()
 endif()
-
-#add_to_tests_list(utils)
-#add_to_tests_list(pimpl)
-
-#tests_add_executable(check_all ${UNIT_TEST_SOURCE_LIST} ${GTEST_TEST_ARGS})
-#message(FATAL_ERROR ${UNIT_TEST_SOURCE_LIST})
-
-# "pimpl" is one of test program names
-add_custom_command( TARGET ${ROOT_PROJECT_NAME}-pimpl POST_BUILD
-                    COMMAND ${CMAKE_COMMAND} -E copy_directory
-                        ${CMAKE_CURRENT_SOURCE_DIR}/data ${CMAKE_BINARY_DIR}/bin/$<CONFIG>/tests/data )
-
-enable_testing()
 
 foreach(target IN LISTS ALL_TESTS_LIST_VERBOSE)
   add_dependencies(${ROOT_PROJECT_NAME}_run_all_tests
