--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -227,6 +227,10 @@ endif()
 # see https://doc.magnum.graphics/corrade/corrade-cmake.html#corrade-cmake-subproject
 find_package(Corrade REQUIRED PluginManager)
 
+target_link_libraries(${STATIC_LIB_NAME} PRIVATE
+  CONAN_PKG::openssl
+)
+
 target_link_libraries(${STATIC_LIB_NAME} PUBLIC
   CONAN_PKG::boost
   CONAN_PKG::entt
